# o-clock

./: .ghci  .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.ci  cabal.project.local.ubuntu-example  o-clock.cabal  safe-time.cabal  stack-8.0.2.yaml  stack-8.2.2.yaml  stack-8.4.4.yaml  stack-8.8.1.yaml  stack.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.reuse/: dep5
benchmark/: Main.hs
examples/: Playground.hs
src/: Time.hs
src/Time/: Bool.hs  Formatting.hs  Rat.hs  Rational.hs  Series.hs  TimeStamp.hs  Timestamp.hs  Units.hs
test/: Doctest.hs  Spec.hs
test/Test/Time/: Property.hs  ReadShow.hs  TimeStamp.hs  Timestamp.hs  TypeSpec.hs  Units.hs
