name:                safe-time
version:             0.1.0.0
description:         Type-safe time library.
homepage:            https://github.com/serokell/safe-time
bug-reports:         https://github.com/serokell/safe-time/issues
license:             MIT
license-file:        LICENSE
author:              @serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2018 Serokell
category:            Time
build-type:          Simple
extra-doc-files:     CHANGELOG.md
                   , README.md
cabal-version:       >=1.18
tested-with:         GHC == 8.0.1
                   , GHC == 8.0.2
                   , GHC == 8.2.2

source-repository head
  type:     git
  location: https://github.com/serokell/safe-type

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall
  build-depends:       base      >= 4.11
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       RecordWildCards


test-suite safe-time-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base      >= 4.11
                     , safe-time
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       RecordWildCards

benchmark safe-time-benchmark
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base      >= 4.11
                     , safe-time
  default-extensions:  OverloadedStrings
                       RecordWildCards
